# ecg

./: .gitignore  pixi.toml  pyproject.toml
notebooks/: data_processing.ipynb
src/ecg/: preprocessing.py
