[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg"
version = "0.1.0"
authors = [{ name = "Alan", email = "alanzenh@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.3",
    "tensorflow==2.15.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "openpyxl>=3.1.5,<4",
    "xlsxwriter>=3.2.9,<4",
    "tqdm>=4.66",
    "matlabengine==24.2.*",
    "pytorch>=2.10.0,<3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ecg"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=ecg --cov-report=term-missing"